<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/billabong"
        android:text="@string/str_instagram"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/et_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/view_rounded_corner"
        android:backgroundTint="#FAFAFA"
        android:hint="@string/str_full_name"
        android:paddingStart="15dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/view_rounded_corner"
        android:backgroundTint="#FAFAFA"
        android:hint="@string/str_email"
        android:paddingStart="15dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/view_rounded_corner"
        android:backgroundTint="#FAFAFA"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/view_rounded_corner"
        android:backgroundTint="#FAFAFA"
        android:hint="@string/str_confirm_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/view_rounded_corner"
        android:backgroundTint="@color/color_blue"
        android:clickable="false"
        android:padding="13dp"
        android:text="@string/str_registration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_already_have_an_account"
            android:textColor="@color/black_40"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/str_sign_in"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>